Bug 169825 - FILESAVE PPTX Certain layouts are exported invalid
Summary: FILESAVE PPTX Certain layouts are exported invalid
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.6.5.2 release
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:26.8.0 target:25.8.5 target:26...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PPTX-Corrupted PPTX-MasterSlide
  Show dependency treegraph
 
Reported: 2025-12-04 15:04 UTC by Aron Budea
Modified: 2025-12-23 16:19 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
rhbz433327-1.odp (82.25 KB, application/vnd.oasis.opendocument.presentation)
2025-12-04 15:04 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-12-04 15:04:51 UTC
Created attachment 204431 [details]
rhbz433327-1.odp

Save the attached ODP, rhbz433327-1.odp to PPTX, and try opening it in PowerPoint.

=> PowerPoint fails to open the file cleanly.

The problem is that the layout is saved as 'vertTitleAndTxOverChart', and likely doesn't contain the expected placeholders.
The original is a bit odd, as it does contain an autolayout with the name 'AL0T27' (this is LO's equivalent of the PPTX style 'vertTitleAndTxOverChart') and another with 'AL1T21', but only the second is referenced in content.xml. This second one is an autolayout with notes, and this is what ends up being exported as 'vertTitleAndTxOverChart' because of the following entry in a list that matches LO's layouts to PPTX ones:
https://github.com/LibreOffice/core/blob/9b110cf0e640e67990a3fc43d20fcbed8ce39387/sd/source/filter/eppt/pptx-epptooxml.cxx#L260

Note that there's no 1:1 correspondence between Impress and PPTX layouts (the latter are described in ST_SlideLayoutType type).
The notes layout, which might've originally be written erroneously into the ODP, needs to be exported as type 'blank' in this case. The file itself is also quite old, and was saved in OO 2.4.

This started with the following commit in 7.6.5/24.2.0, which reworked the export of layouts to address another bug:
https://git.libreoffice.org/core/commit/bff76421e234df7246a7f49c71a11432f86e09d1
author		Balazs Varga <balazs.varga.extern@allotropia.de>	Sun Dec 03 23:41:01 2023 +0100
committer	Balazs Varga <balazs.varga.extern@allotropia.de>	Mon Dec 18 15:10:54 2023 +0100

tdf#157740 FILESAVE PPTX: fix explosion of the number of master slides
Comment 1 Aron Budea 2025-12-04 15:10:12 UTC
Other affected files:
forum-en-1742.odp
forum-en-2079.odp
forum-en-2279.odp
kde203581-2.odp
ooo103651-1.odp
ooo110368-6.odp
ooo113174-1.odp
rhbz433327-1.odp
rhbz475119-1.odp
rhbz512355-1.odp
rhbz521007-1.odp
Comment 2 Aron Budea 2025-12-05 12:17:26 UTC
A related issue is that if you create a new presentation in Impress, set either of the vertical layouts ("Vertical Title, Text, Chart" or "Vertical Title, Vertical Text"), and save as PPTX, the 'type' attribute of 'p:sldLayout' in ppt/slideLayouts/slideLayoutX.xml inside the .pptx archive will have the erroneous values 'picTx' (Picture and Caption) and 'objTx' (Title, Object, and Caption) instead of the correct 'vertTitleAndTxOverChart' and 'vertTitleAndTx' ones.

This doesn't cause an immediate issue in PowerPoint, but the values are obviously not correct.
Comment 3 Commit Notification 2025-12-09 08:56:45 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eb338daa90afd569e1b86c058bb88a89fab6a557

tdf#169825 AutoLayout can be incorrectly exported to PPTX

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-12-10 08:41:14 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/4c94b9a54162680fa99fb15dceb10c1e779fec3f

tdf#169825 AutoLayout can be incorrectly exported to PPTX

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-12-10 08:41:18 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/d9bc09714bb74be2c580f679e2644eba756555a7

tdf#169825 AutoLayout can be incorrectly exported to PPTX

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.