tdf#169825 AutoLayout can be incorrectly exported to PPTX

...as vertTitleAndTxOverChart, if ODP layout was
AUTOLAYOUT_NOTES, causing corruption.

PPTX export code directly matched LO's AutoLayout IDs to
PPTX layout types (OOXML spec: 19.7.15 ST_SlideLayoutType
(Slide Layout Type)) without conversion, as some don't have
direct match, and need to be matched to blank layouts. This
could result in PPTXes that can't be opened in PowerPoint.

It could also result in PPTXes with wrong layout types when
using LO's own vertical layouts. The files could still be
opened in PP in this case.

In addition, import code imported vertical PPTX layouts
with wrong IDs, matching them to notes and handout autolayouts.

Part of the mentioned behavior happened since
bff76421e234df7246a7f49c71a11432f86e09d1.

Change-Id: Iba7a50795979c22bc566aa2cd6ea4d82f7f9477e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195049
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Aron Budea <aron.budea@collabora.com>
(cherry picked from commit eb338daa90afd569e1b86c058bb88a89fab6a557)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195283
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>