sd/source/filter/eppt/epptbase.hxx
@@ -74,7 +74,6 @@ enum class EppLayout
 };
 
 #define EPP_LAYOUT_SIZE 25
-#define OOXML_LAYOUT_SIZE 36
 
 struct PHLayout
 {
