sd/source/filter/eppt/epptooxml.hxx
@@ -23,6 +23,7 @@
 #include <oox/vml/vmldrawing.hxx>
 #include <oox/export/shapes.hxx>
 #include <unotools/securityoptions.hxx>
+#include <xmloff/autolayout.hxx>
 #include "epptbase.hxx"
 
 using ::sax_fastparser::FSHelperPtr;
@@ -147,7 +148,7 @@ private:
 
     ::sax_fastparser::FSHelperPtr mPresentationFS;
 
-    LayoutInfo mLayoutInfo[OOXML_LAYOUT_SIZE];
+    LayoutInfo mLayoutInfo[AUTOLAYOUT_END];
     // Pairs of masters and layouts as used by Impress
     std::vector<std::pair<SdrPage*, sal_Int32>> maMastersLayouts;
     // For each Impress master, which master will represent it on the exported file (SAL_MAX_UINT32 if not in an equivalency group)
